src/test/deca/context/invalid/provided/modulo_non_ints.deca
//Resultats :
//Erreur contextuelle
//Ligne 4: can only be applied to ints
{float x = 3.2 % 1.6;}
